--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@tsconfig/svelte": "^2.0.1",
+    "node-sass": "^4.14.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.51.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.7.0",
     "svelte-preprocess": "^4.10.6",
