--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
     "types": ["node", "svelte"]
   },
   "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/**/*.ts"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
