Add support Eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
+  "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+    "lib": ["DOM", "ESNext", "WebWorker"],
     "types": ["node", "svelte"]
   },
-  "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": ["src/**/*", "src/**/*.ts"],
+  "include": ["src/**/*", "src/node_modules/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
