--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@rollup/plugin-replace": "^5.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
     "@tsconfig/svelte": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "rollup": "^3.2.3",
     "rollup-plugin-css-only": "^4.2.0",
     "rollup-plugin-livereload": "^2.0.5",
