--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,12 @@
   },
   "plugins": ["@typescript-eslint", "svelte3"],
   "settings": { "svelte3/typescript": true },
-  "ignorePatterns": ["rollup.config.mjs", "svelte.config.js", "node_modules"],
+  "ignorePatterns": [
+    "rollup.config.mjs",
+    "svelte.config.js",
+    "node_modules",
+    "public/build/*.js"
+  ],
   "rules": {
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-explicit-any": "off"
